apps/unithon/frontend-dev/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: unithon-frontend-dev
  namespace: unithon
  labels:
    app: unithon-frontend-dev
spec:
  type: ClusterIP
  ports:
    - port: 3000
  selector:
    app: unithon-frontend-dev
